// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SystemConfigReducers should handle all defined error types 1`] = `
Object {
  "result": Object {
    "configuration": Object {},
    "error": false,
    "errorMessage": "",
    "fulfilled": false,
    "pending": false,
  },
  "type": "default_REJECTED",
}
`;

exports[`SystemConfigReducers should handle all defined error types 2`] = `
Object {
  "result": Object {
    "configuration": Object {},
    "error": true,
    "errorMessage": Object {
      "message": "MESSAGE",
      "response": Object {
        "data": Object {
          "detail": "ERROR",
        },
      },
    },
    "fulfilled": false,
    "pending": false,
  },
  "type": "GET_SYSTEM_CONFIG_REJECTED",
}
`;

exports[`SystemConfigReducers should handle all defined fulfilled types 1`] = `
Object {
  "result": Object {
    "configuration": Object {},
    "error": false,
    "errorMessage": "",
    "fulfilled": false,
    "pending": false,
  },
  "type": "default_FULFILLED",
}
`;

exports[`SystemConfigReducers should handle all defined fulfilled types 2`] = `
Object {
  "result": Object {
    "configuration": Object {
      "test": "success",
    },
    "error": false,
    "errorMessage": "",
    "fulfilled": true,
    "pending": false,
  },
  "type": "GET_SYSTEM_CONFIG_FULFILLED",
}
`;

exports[`SystemConfigReducers should handle all defined pending types 1`] = `
Object {
  "result": Object {
    "configuration": Object {},
    "error": false,
    "errorMessage": "",
    "fulfilled": false,
    "pending": false,
  },
  "type": "default_PENDING",
}
`;

exports[`SystemConfigReducers should handle all defined pending types 2`] = `
Object {
  "result": Object {
    "configuration": Object {},
    "error": false,
    "errorMessage": "",
    "fulfilled": false,
    "pending": true,
  },
  "type": "GET_SYSTEM_CONFIG_PENDING",
}
`;
